# ShaderCloud

./: .gitignore  CMakeLists.txt  README.md
Dependencies/curl/lib/: libcurl.lib
Dependencies/glfw/lib/: glfw3.lib
Dependencies/imgui/: imgui.cpp  imgui.h  imgui_binding.cpp  imgui_draw.cpp
Dependencies/kissfft/: kiss_fft.c  kiss_fft.h
Dependencies/lame/include/: lame.h
Dependencies/nanovg/: nanovg.c  nanovg.h
Dependencies/nativefiledialogs/: nfd_win.cpp
Dependencies/rtaudio/include/: RtAudio.h
Dependencies/rtaudio/lib/: rtaudio_static.lib
Dependencies/stb/: stb_image.h
Resources/: imgui.ini  shader.frag  userShader.frag  userShader1.frag  userShader2.frag
Source/: Application.cpp  Application.h  config.h  example.cpp  main.cpp
Source/Algorithm/: FFT.h
Source/Audio/: AudioFile.cpp  AudioFile.h  Decoder.cpp  Decoder.h  Playback.cpp  Playback.h
Source/Graphics/: Shader.cpp  Shader.h  ShaderVisualizer.cpp  ShaderVisualizer.h  Texture.h  UserInterface.cpp  UserInterface.h  Window.cpp  Window.h
Source/Utils/: FileDialog.cpp  FileDialog.h  HTTP.cpp  HTTP.h  Math.h  NotificationHandler.cpp  NotificationHandler.h  Thread.h  Threading.cpp  Threading.h
cmake_modules/: FindCURL.cmake  FindLAME.cmake  FindRTAUDIO.cmake  FindSNDFILE.cmake
